[build-system]
requires = [""]
build-backend = ""

[project]
name = "Expressway"
version = ""
authors = [
  { name="", email="" },
]
description = ""
readme = ""
requires-python = ""
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [

]

[project.urls]
"Homepage" = ""
"Bug Tracker" = ""